--- a/css/styles.css
+++ b/css/styles.css
@@ -19,13 +19,13 @@
   --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }*/
 
-.page {
+/*.page {
   font-family: var(--main-font);
   color: var(--main-text-cl);
   background-color: var(--accent-bg-cl);
-}
+}*/
 
-/* reset*/
+/* 
 h1,
 h2,
 h3,
@@ -36,7 +36,7 @@ p,
 ul {
   margin: 0;
   padding: 0;
-}
+}*/
 
 .container {
   width: 1200px;
