--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,24 @@ img {
   max-width: 100%;
 }
 
+.list {
+  list-style: none;
+  font-weight: 500;
+}
+
+.link {
+  text-decoration: none;
+  color: currentColor;
+  font-style: normal;
+  -webkit-transition: color var(--transition);
+  transition: color var(--transition);
+}
+
+.link:hover,
+.link:focus {
+  color: var(--second-text-cl);
+}
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -60,4 +78,125 @@ img {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+}
+
+.header__container {
+  border-bottom: 1px solid #ececec;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.logo {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 93px;
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+  font-family: var(--second-font);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #2196f3;
+}
+
+.logo__header {
+  color: #000000;
+}
+
+.header__list {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: auto;
+}
+
+.header__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  padding: 32px 0;
+  -webkit-transition: color var(--transition);
+  transition: color var(--transition);
+}
+
+.header__icon {
+  -webkit-transition: fill var(--transition);
+  transition: fill var(--transition);
+}
+
+.header__link:hover .header__icon {
+  fill: var(--second-text-cl);
+}
+
+.header__link:focus .header__icon {
+  fill: var(--second-text-cl);
+}
+
+.header__item {
+  color: var(--third-text-cl);
+  font-size: 14px;
+  letter-spacing: 0.02em;
+  margin-top: 9px;
+}
+
+.nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav__link {
+  position: relative;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: inline-block;
+}
+
+.nav__link:hover::after {
+  opacity: 1;
+}
+
+.nav__link.current {
+  color: var(--second-text-cl);
+}
+
+.nav__link.current::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+}
+
+.current {
+  color: var(--second-text-cl);
 }/*# sourceMappingURL=main.css.map */
