--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ ul {
 
 /* HERO */
 
-.hero {
+/*.hero {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
@@ -231,11 +231,11 @@ ul {
 .btn__hero:hover,
 .btn__hero:focus {
   background: #188ce8;
-}
+}*/
 
 
 /* modal window */
-.backdrop {
+/*.backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -286,7 +286,7 @@ ul {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
-}
+}*/
 
 .register-form-title{
   display: block;
