--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,5 @@
 @import"./components/container";
 @import"./components/header";
 @import"./components/navigation";
+@import"./components/hero";
+@import"./components/modal";
