--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,4 @@
 @import"./components/navigation";
 @import"./components/hero";
 @import"./components/modal";
+@import"./components/register-form";
