--- a/css/styles.css
+++ b/css/styles.css
@@ -437,7 +437,7 @@ transition: background-color var(--transition);
 /* Особливості */
 /*прихований заголовок*/
 
-.visually-hidden {
+/*.visually-hidden {
   position: absolute;
   white-space: nowrap;
   width: 1px;
@@ -448,7 +448,7 @@ transition: background-color var(--transition);
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   margin: -1px;
-}
+}*/
 
 .features {
   display: flex;
