--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,6 @@ img {
 
 .link {
   text-decoration: none;
-  color: currentColor;
   font-style: normal;
   -webkit-transition: color var(--transition);
   transition: color var(--transition);
@@ -119,6 +118,7 @@ img {
 }
 
 .header__link {
+  color: var(--third-text-cl);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -145,7 +145,6 @@ img {
 }
 
 .header__item {
-  color: var(--third-text-cl);
   font-size: 14px;
   letter-spacing: 0.02em;
   margin-top: 9px;
@@ -317,4 +316,162 @@ img {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
+}
+
+.register-form-title {
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 12px;
+}
+
+.register-form-group {
+  margin-bottom: 20px;
+}
+
+.register-form-field {
+  display: block;
+  margin-bottom: 10px;
+  position: relative;
+}
+
+label {
+  display: block;
+}
+
+.register-form-label {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--third-text-cl);
+  margin-bottom: 4px;
+}
+
+.register-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+  padding-right: 42px;
+  outline: transparent;
+  -webkit-transition: border-color var(--transition);
+  transition: border-color var(--transition);
+}
+
+.register-form-input:focus,
+.register-form-input:hover {
+  border-color: var(--third-bg-cl);
+}
+
+.register-form-icon {
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
+  -webkit-transition: fill var(--transition);
+  transition: fill var(--transition);
+}
+
+.register-form-input:focus + .register-form-icon {
+  fill: var(--third-bg-cl);
+}
+
+.register-form-input:hover + .register-form-icon {
+  fill: var(--third-bg-cl);
+}
+
+.register-form-message {
+  display: block;
+  resize: none;
+  outline: transparent;
+  width: 100%;
+  height: 138px;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  -webkit-transition: border-color var(--transition);
+  transition: border-color var(--transition);
+}
+
+.register-form-message:focus,
+.register-form-message:hover {
+  border-color: var(--third-bg-cl);
+}
+
+.register-form-agreement {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 7px;
+  margin-bottom: 30px;
+}
+
+.icon-checked {
+  opacity: 0;
+  fill: #2196f3;
+  -webkit-transition: opacity var(--transition);
+  transition: opacity var(--transition);
+}
+
+.register-form-checkbox:checked + .register-form-icons .icon-checked {
+  opacity: 1;
+}
+
+.icon-unchecked {
+  opacity: 1;
+  -webkit-transition: opacity var(--transition);
+  transition: opacity var(--transition);
+}
+
+.register-form-checkbox:checked + .register-form-icons .icon-unchecked {
+  opacity: 0;
+}
+
+.register-form-desc {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.register-form-link {
+  color: var(--second-text-cl);
+}
+
+.register-form-btn {
+  display: block;
+  margin: 0 auto;
+  width: 200px;
+  height: 50px;
+  letter-spacing: 0.06em;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  color: #FFFFFF;
+  background: #2196F3;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  -webkit-transition: background-color var(--transition);
+  transition: background-color var(--transition);
+}
+
+.register-form-btn:hover,
+.register-form-btn:focus {
+  background-color: #188ce8;
 }/*# sourceMappingURL=main.css.map */
