--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,13 @@
 @import"./components/hero";
 @import"./components/modal";
 @import"./components/register-form";
+@import"./components/features";
+@import"./components/title";
+@import"./components/subtitle";
+@import"./components/services";
+@import"./components/team";
+@import"./components/clients";
+@import"./components/footer";
+@import"./components/portfolio-btn";
+@import"./components/card-set";
+
