--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -14,7 +14,6 @@
     color: var(--third-text-cl);
   }
   
-  
   .card-set {
     display: flex;
     flex-wrap: wrap;
@@ -68,12 +67,13 @@
     display: block;
     transition: box-shadow var(--transition),
     color var(--transition);
-  }
-  
-  .list-link:hover,
-  .list-link:focus {
+    &:hover,
+    &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
     color: inherit;
   }
+}
+  
+  
   
