--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -14,19 +14,19 @@
     padding-bottom: 200px;
     background-position: center;
     background-size: cover;
-  }
-  
-  .hero__title {
-    color: var(--fourth-text-cl);
-    font-family: var(--main-font);
-    font-style: normal;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    margin-bottom: 30px;
+
+    &__title {
+      color: var(--fourth-text-cl);
+      font-family: var(--main-font);
+      font-style: normal;
+      font-weight: 900;
+      font-size: 44px;
+      line-height: 1.36;
+      text-align: center;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+      margin-bottom: 30px;
+    }
   }
   
   .btn__hero {
@@ -45,9 +45,11 @@
     border-radius: 4px;
     border: none;
     transition: background-color var(--transition);
+
+    &:hover,
+    &:focus {
+      background: #188ce8;
+    }
   }
   
-  .btn__hero:hover,
-  .btn__hero:focus {
-    background: #188ce8;
-  }
+ 
