--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -2,29 +2,31 @@
     display: flex;
     gap: 30px;
       padding-top: 94px;
-  }
-  
-  .features__box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 270px;
-    height: 120px;
-    background-color: #f5f4fa;
-    border-radius: 4px;
-    margin-bottom: 30px;
-  }
-  
-  .features__item {
-    flex-basis: calc((100% - 90px) / 4);
-  }
 
-  .features__subtitle--text {
-    color: var(--third-text-cl);
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    margin-top: 10px;
-    font-weight: 400;
-  }
+      &__item {
+        flex-basis: calc((100% - 90px) / 4);
+      }
+      &__box {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 270px;
+        height: 120px;
+        background-color: #f5f4fa;
+        border-radius: 4px;
+        margin-bottom: 30px;
+      }
+      &__subtitle--text {
+        color: var(--third-text-cl);
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        margin-top: 10px;
+        font-weight: 400;
+      }
+    }
+  
+  
+  
+  
   
