--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -18,12 +18,12 @@
     transform: translate(-50%, -50%) scale(1);
     transition: transform var(--transition);
     width: 528px;
-    
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
   }
+
   .modal-btn {
     position: absolute;
     top: 8px;
@@ -38,11 +38,10 @@
     border-radius: 50%;
     cursor: pointer;
     transition: fill var(--transition);
-  }
-  
-  .modal-btn:hover,
-  .modal-btn:focus{
+    &:hover,
+  &:focus{
     fill: var(--third-bg-cl);
+  }
   }
   
   .backdrop.is-hidden {
