--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -15,25 +15,24 @@
     padding-bottom: 32px;
     display: inline-block;
     color: var(--main-text-cl);
+    &:hover::after {
+      opacity: 1;
+    }
   }
   
-  .nav__link:hover::after {
-    opacity: 1;
-  }
   .nav__link.current {
     color: var(--second-text-cl);
-  }
-  
-  .nav__link.current::after {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    bottom: -4px;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    background: #2196f3;
-    border-radius: 2px;
+    &::after {
+      content: "";
+      display: inline-block;
+      position: absolute;
+      bottom: -4px;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      background: #2196f3;
+      border-radius: 2px;
+    }
   }
   
   .current {
