--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -96,8 +96,8 @@ address {
     display: flex;
     align-items: flex-end;
       justify-content: flex-end;
-    margin-top: 20px;}
-  
+    margin-top: 20px;
+  }
   
   .footer-subscription-mail{
     box-sizing: border-box;
@@ -108,7 +108,6 @@ address {
   background-color: var(--second-bg-cl);
   border-radius: 4px;
   }
-  
   
   .footer-subscription-btn{
     display: flex;
