--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -107,6 +107,7 @@ address {
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: var(--second-bg-cl);
   border-radius: 4px;
+  color: #FFFFFF;
   }
   
   .footer-subscription-btn{
