--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,7 @@ img {
 }
 
 .section {
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 
@@ -189,7 +190,7 @@ img {
   content: "";
   display: inline-block;
   position: absolute;
-  bottom: -4px;
+  bottom: -1px;
   left: 0;
   width: 100%;
   height: 4px;
@@ -467,7 +468,6 @@ img {
   display: -ms-flexbox;
   display: flex;
   gap: 30px;
-  padding-top: 94px;
 }
 .features__item {
   -ms-flex-preferred-size: calc((100% - 90px) / 4);
@@ -580,18 +580,12 @@ img {
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
 
 .text-card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -649,14 +643,6 @@ img {
 
 .socials-icon {
   fill: currentColor;
-}
-
-.team .title {
-  padding-top: 94px;
-}
-
-.clients {
-  padding-top: 94px;
 }
 
 .list-clients {
@@ -838,6 +824,7 @@ address {
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: var(--second-bg-cl);
   border-radius: 4px;
+  color: #FFFFFF;
 }
 
 .footer-subscription-btn {
@@ -879,7 +866,6 @@ address {
 }
 
 .list-portfolio-btn {
-  padding-top: 94px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
